Add collab badge

--- a/doc-test-2/source/jupyterlab/notebook_test_2.ipynb
+++ b/doc-test-2/source/jupyterlab/notebook_test_2.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](http://colab.research.google.com/github/pgraverdy/sphynx-notebooks/blob/main/notebook_test_2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "22f8c9d0-28ad-4978-b899-8c1c78bdea5d",
    "metadata": {},
    "source": [
