Add buttons for Colab and Binder

--- a/doc-test-2/source/jupyterlab/notebook_test_2.ipynb
+++ b/doc-test-2/source/jupyterlab/notebook_test_2.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cc3cd01b",
    "metadata": {},
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](http://colab.research.google.com/github/pgraverdy/sphynx-notebooks/blob/main/notebook_test_2.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](http://colab.research.google.com/github/pgraverdy/sphynx-notebooks/blob/main/doc-test-2/source/jupyterlab/notebook_test_2.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/pgraverdy/sphynx-notebooks/main?labpath=doc-test-2%2Fsource%2Fjupyterlab%2Fnotebook_test_2.ipynb)"
    ]
   },
   {
